--- a/snappy/src/main/AndroidManifest.xml
+++ b/snappy/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
       android:required="false"/>
 
   <uses-permission android:name="android.permission.CAMERA"/>
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+  <uses-permission
+      android:name="android.permission.WRITE_EXTERNAL_STORAGE"
       tools:ignore="ScopedStorage"/>
 
   <application>
@@ -18,7 +20,9 @@
         android:screenOrientation="behind"
         android:theme="@style/SnappyActivity">
 
-      <meta-data android:name="android.notch_support" android:value="true"/>
+      <meta-data
+          android:name="android.notch_support"
+          android:value="true"/>
     </activity>
   </application>
 
