--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-accompanist = "0.25.1"
+accompanist = "0.27.0"
 androidGradle = "7.3.1"
 androidconfig-compileSdk = "33"
 androidconfig-minSdk = "21"
@@ -9,22 +9,24 @@ androidxLifecycle = "2.5.1"
 appcompat = "1.5.1"
 cameraX = "1.1.0"
 coil = "2.2.2"
-composeActivity = "1.6.0"
-composeAnimation = "1.2.1"
+composeActivity = "1.6.1"
+composeAnimation = "1.3.0"
 composeCompiler = "1.3.2"
 composeConstraintLayout = "1.0.1"
-composeFoundation = "1.2.1"
-composeMaterial = "1.2.1"
-composeMaterial3 = "1.0.0-rc01"
-composeRuntime = "1.2.1"
-composeUiTooling = "1.2.1"
+composeFoundation = "1.3.0"
+composeMaterial = "1.3.0"
+composeMaterial3 = "1.0.0"
+composeRuntime = "1.3.0"
+composeUiTooling = "1.3.0"
 detekt = "1.21.0"
-dokka = "1.7.10"
+dokka = "1.7.20"
 gradleVersions = "0.43.0"
-junit = "5.8.2"
+junit = "5.9.1"
 kotlin = "1.7.20"
+kotlinxCoroutines = "1.6.4"
 materialDesign = "1.7.0"
 snappy = "0.0.1"
+turbine = "0.12.0"
 
 [libraries]
 accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanist" }
@@ -43,20 +45,20 @@ androidx-compose-runtime = { module = "androidx.compose.runtime:runtime", versio
 androidx-compose-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "composeUiTooling" }
 androidx-compose-uiToolingPreview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "composeUiTooling" }
 androidx-compose-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidxLifecycle" }
-androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version = "2.1.4" }
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
 androidx-windows = { module = "androidx.window:window", version = "1.1.0-alpha03" }
-androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version = "1.2.1" }
-androidx-viewpager2 = { module = "androidx.viewpager2:viewpager2", version = "1.0.0" }
 androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
 androidx-lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidxLifecycle" }
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 google-materialDesign = { module = "com.google.android.material:material", version.ref = "materialDesign" }
-kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version = "1.6.4" }
+kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutines" }
 misc-detektFormatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
 test-junitApi = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
 test-junitEngine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
+turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
+assertJ = "org.assertj:assertj-core:3.23.1"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradle" }
