--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanist = "0.28.0"
-androidGradle = "7.3.1"
+androidGradle = "7.4.0-rc01"
 androidconfig-compileSdk = "33"
 androidconfig-minSdk = "21"
 androidconfig-targetSdk = "33"
@@ -18,7 +18,7 @@ composeMaterial = "1.3.1"
 composeMaterial3 = "1.0.1"
 composeRuntime = "1.3.2"
 composeUiTooling = "1.3.2"
-detekt = "1.21.0"
+detekt = "1.22.0"
 dokka = "1.7.20"
 gradleVersions = "0.44.0"
 junit = "5.9.1"
