--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-accompanist = "0.28.0"
-androidGradle = "7.4.2"
+accompanist = "0.30.1"
+androidGradle = "8.0.0"
 androidconfig-compileSdk = "33"
 androidconfig-minSdk = "21"
 androidconfig-targetSdk = "33"
@@ -9,46 +9,41 @@ androidxLifecycle = "2.6.1"
 appcompat = "1.6.1"
 cameraX = "1.2.2"
 coil = "2.3.0"
-composeActivity = "1.6.1"
-composeAnimation = "1.3.3"
-composeCompiler = "1.4.3"
+composeActivity = "1.7.1"
+composeBom = "2023.04.01"
+composeCompiler = "1.4.6"
 composeConstraintLayout = "1.0.1"
-composeFoundation = "1.3.1"
-composeMaterial = "1.3.1"
-composeMaterial3 = "1.0.1"
-composeRuntime = "1.3.3"
-composeUiTooling = "1.3.3"
 detekt = "1.22.0"
 dokka = "1.8.10"
 gradleVersions = "0.46.0"
 junit = "5.9.2"
-kotlin = "1.8.10"
+kotlin = "1.8.20"
 kotlinxCoroutines = "1.6.4"
 materialDesign = "1.8.0"
 snappy = "0.0.1"
-turbine = "0.12.1"
+turbine = "0.12.3"
 
 [libraries]
-accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanist" }
 accompanist-pager-indicators = { module = "com.google.accompanist:accompanist-pager-indicators", version.ref = "accompanist" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 androidx-camera = { module = "androidx.camera:camera-camera2", version.ref = "cameraX" }
 androidx-cameraLifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "cameraX" }
 androidx-cameraPreview = { module = "androidx.camera:camera-view", version.ref = "cameraX" }
 androidx-compose-activity = { module = "androidx.activity:activity-compose", version.ref = "composeActivity" }
-androidx-compose-animation = { module = "androidx.compose.animation:animation", version.ref = "composeAnimation" }
+androidx-compose-animation = { module = "androidx.compose.animation:animation" }
+androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBom" }
 androidx-compose-constraint = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "composeConstraintLayout" }
-androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "composeFoundation" }
-androidx-compose-material-icons = { module = "androidx.compose.material:material-icons-extended", version.ref = "composeMaterial" }
-androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "composeMaterial3" }
-androidx-compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "composeRuntime" }
-androidx-compose-uiTooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "composeUiTooling" }
-androidx-compose-uiToolingPreview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "composeUiTooling" }
+androidx-compose-foundation = { module = "androidx.compose.foundation:foundation" }
+androidx-compose-material-icons = { module = "androidx.compose.material:material-icons-extended" }
+androidx-compose-material3 = { module = "androidx.compose.material3:material3" }
+androidx-compose-runtime = { module = "androidx.compose.runtime:runtime" }
+androidx-compose-uiTooling = { module = "androidx.compose.ui:ui-tooling" }
+androidx-compose-uiToolingPreview = { module = "androidx.compose.ui:ui-tooling-preview" }
 androidx-compose-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidxLifecycle" }
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
 androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
 androidx-lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidxLifecycle" }
-androidx-windows = { module = "androidx.window:window", version = "1.1.0-alpha06" }
+androidx-windows = { module = "androidx.window:window", version = "1.1.0-beta02" }
 assertJ = "org.assertj:assertj-core:3.24.2"
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
