--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,20 +6,21 @@ androidconfig-minSdk = "21"
 androidconfig-targetSdk = "34"
 androidxCore = "1.12.0"
 androidxLifecycle = "2.6.2"
+androidxWindow = "1.2.0"
 appcompat = "1.6.1"
-cameraX = "1.3.0"
+cameraX = "1.3.1"
 coil = "2.5.0"
-composeActivity = "1.8.1"
+composeActivity = "1.8.2"
 composeBom = "2023.10.01"
-composeCompiler = "1.5.4"
+composeCompiler = "1.5.6"
 composeConstraintLayout = "1.0.1"
 detekt = "1.23.4"
 dokka = "1.9.10"
 gradleVersions = "0.50.0"
 junit = "5.10.1"
-kotlin = "1.9.20"
+kotlin = "1.9.21"
 kotlinxCoroutines = "1.7.3"
-materialDesign = "1.10.0"
+materialDesign = "1.11.0"
 snappy = "0.0.1"
 turbine = "1.0.0"
 
@@ -43,7 +44,7 @@ androidx-compose-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
 androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
 androidx-lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidxLifecycle" }
-androidx-windows = { module = "androidx.window:window", version = "1.2.0" }
+androidx-windows = { module = "androidx.window:window", version.ref = "androidxWindow" }
 assertJ = "org.assertj:assertj-core:3.24.2"
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
